# nextjs-bevy-boilarplate

./: Cargo.toml  package.json
src/: entry.rs  lib.rs
src/app/: layout.tsx  page.tsx
