[package]
name = "nextjs-bevy-boilarplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.11.3"
console_log = "1.0.0"
wasm-bindgen = "0.2.87"
web-sys = "0.3.4"
